	  anime relations without having to visit AniDB.

1.16 - ?
	- Release dates in the current year or month without a specified day will
	  be considered as not yet released
	- Added platform and language icons to the VN browser
	- Grouped producers, user stats and general information on the VN page
	- Added language icons to producer browser
	- A little CSS cleanup
	- Grouped category browser into one advanced search

1.15 - 2008-05-04
	- Relation graph now also updated on VN title change
	- Anime relations
	- [js] Position of the dropdown box is now relative to the link element
	- Used inline-block for icon image sprites (to avoid stupid float hacks)
	- Used icons to indicate the release status type on VN pages
	- Give a 'not logged in' dropdown edit box when the user isn't logged in
	- Fixed the redirects for old URLs
	- Designed a better system to handle documentation
	- Created a centralised system for site errors within the same layout
	- Wrote some more documentation
	- Multi::IRC now also handles d[0-9] IDs
	- Multi::Maintenance automatically rotates Multi's logs

1.14 - 2008-04-26
	- Removed the ID gap prevention method
	- Moved static content to static.vndb.org (and rely on lighty for js/css
	  compression)
	- relation graphs and cover images now get an ID instead of MD5-sum
	- Added Nintendo Wii to platforms
	- Added 'hidden' flag, which should now be used instead of the delete option
	- Fixed the ordering of nodes in the relation graphs
	- Used global.pl as the central location of the PgSQL login info
	- Wrote a daemon which handles several tasks:
	  - Generation of relation graphs
	  - Generation of the sitemap.xml.gz
	  - The IRC bot
	  - scaling/compressing of cover images
	  - General maintenance
	- Fixed bug with categories not being re-selected after an error submitting
	  a new VN
	- Relation graphs are now automatically updated when a change in a related
	  release causes information in the graph to be outdated

1.13 - 2008-04-04